<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopItemsListActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:id="@+id/idLinearLayoutProductImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_shop_item_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_1" />

            <Button
                android:id="@+id/button_shop_item_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_2" />


            <Button
                android:id="@+id/button_shop_item_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_3" />

            <Button
                android:id="@+id/button_shop_item_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_4" />

            <Button
                android:id="@+id/button_shop_item_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_5" />

            <Button
                android:id="@+id/button_shop_item_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_6" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_7" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>